--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
+    "reset-css": "^5.0.1",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
